<resources>
    <string name="app_name">PixLed</string>
    <string name="device">Device</string>
    <string name="noise">Noise</string>
    <string name="ok">Check</string>
    <string name="enter_group">Enter group :</string>
    <string name="deviceonoff">device ON/OFF</string>
    <string name="ringonoff">device ON/OFF</string>
    <string name="image_content_description">device Status</string>
    <string name="delete_button_description">Delete Button</string>
    <string name="welcome">Welcome to PixLed App!</string>
    <string name="welcome_button">Start now!</string>
    <string name="select_building">Select a building</string>
    <string name="device_level">Intensity</string>
    <string name="device_number">Number of devices :</string>
    <string name="group_switch">Switch Group</string>
    <string name="color">Color</string>
    <string name="status">Status</string>
    <string name="change_device_color">Change Device Color</string>
    <string name="checkServer">Looking for the PixLedServer...</string>
    <string name="checkMqtt">Looking for the MQTT broker...</string>
    <string name="setup_success">PixLed is ready!</string>
    <string name="mqtt_connection_failed">MQTT connection failed. =(</string>
    <string name="connecting_mqtt">Connecting to the MQTT broker...</string>
    <string name="add_device_to_group">Add Device</string>
    <string name="edit_group">Edit Group</string>
    <string name="devices_in_group">Devices In Group :</string>
    <string name="available_devices">Available Devices :</string>
    <string name="all_devices_in_group">All devices are currently in this group!</string>
    <string name="new_group">New Group</string>
    <string name="delete_group">Delete group</string>
    <string name="delete">DELETE</string>
    <string name="set_server_ip">Set Server IP</string>
    <string name="save_ip">Save IP</string>
    <string name="cancel">Cancel</string>
    <string name="set_up_ip">Enter your server IP address:</string>
</resources>
